--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
 <title>Record</title>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -12,7 +11,7 @@
 <body>
 
 <div id="contents">
-<div class="header_container">
+<div class="header_container"><div class="inner">
 <header id="header">
 <h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
 </header>
@@ -23,8 +22,9 @@
 	<li><a href="works.html">WORKS</a></li>
 	<li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--header_container-->
+</div><!--header_container--></div>
 
+<div class="wrap">
 <div class="breadcrumb">
 <ul>
 	<li><a href="index.html">TOP</a></li>
@@ -32,7 +32,7 @@
 </ul>
 </div><!--breadcrumb-->
 
-<div id="wrap">
+<div id="about_column">
 <p class="profile_icon"><img src="img/icon.jpg" alt="myphoto"></p>
 <div class="intro">
 
@@ -74,9 +74,10 @@
 <p>ゲームのUI/UXを手掛ける人になりたい。</p>
 <!--sentence--></div>
 </div><!--intro-->
+</div><!--about_column-->
 </div><!--wrap-->
 
-<footer id="footer">
+<footer id="footer"><div class="inner">
 
 <ul class="url_btn">
 <!--facebook-->
@@ -88,7 +89,7 @@
 </ul>
 
 <small>&copy; Ami Matsuba, all rights reserved.</small>
-</footer>
+</div></footer>
 
 
 
