--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="contents">
-<div class="header_container">
+<div class="header_container"><div class="inner">
 <header id="header">
 <h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
 </header>
@@ -24,8 +24,9 @@
 	<li><a href="works.html">WORKS</a></li>
 	<li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--header_container-->
+</div></div><!--header_container-->
 
+<div class="wrap">
 <div class="breadcrumb">
 <ul>
 	<li><a href="index.html">TOP</a></li>
@@ -82,9 +83,9 @@
 <p class="text_center"><input value="送信する" type="submit">　<input name="reset" value="リセット" type="reset"></p>
 </form>
 </div><!--main_wrap-->
+</div><!--wrap-->
 
-
-<footer id="footer">
+<footer id="footer"><div class="inner">
 
 <ul class="url_btn">
 <!--facebook-->
@@ -96,7 +97,7 @@
 </ul>
 
 <small>&copy; Ami Matsuba, all rights reserved.</small>
-</footer>
+</div></footer>
 <!--contents--></div>
 
 </body>
