--- a/works.html
+++ b/works.html
@@ -30,7 +30,7 @@
 
 <body>
 <div id="contents">
-<div class="header_container">
+<div class="header_container"><div class="inner">
 <header id="header">
 <h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
 </header>
@@ -41,8 +41,9 @@
 	<li><a href="works.html">WORKS</a></li>
 	<li><a href="contact.html">CONTACT</a></li>
 </ul>
-</div><!--header_container-->
+</div></div><!--header_container-->
 
+<div class="wrap">
 <div class="breadcrumb">
 <ul>
 	<li><a href="index.html">TOP</a></li>
@@ -75,10 +76,10 @@
 <a rel="example_group" href="img/design_box/cafe67_top.png"  title="cafe67toppage"><img src="img/design_box/cafe67_top.png" alt="cafe67toppage"></a>
 <a rel="example_group" href="img/design_box/seihosyou_top.png" title="正保小学校toppage"><img src="img/design_box/seihosyou_top.png" alt="正保小学校top"></a>
 </div><!--design_box-->
+</div><!--wrap-->
 
 
-
-<footer id="footer">
+<footer id="footer"><div class="inner">
 
 <ul class="url_btn">
 <!--facebook-->
@@ -90,7 +91,7 @@
 </ul>
 
 <small>&copy; Ami Matsuba, all rights reserved.</small>
-</footer>
+</div></footer>
 	
 </div><!--contents-->
 </body>
