--- a/about.html
+++ b/about.html
@@ -4,25 +4,46 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Record</title>
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
 
 <div id="contents">
 <div class="header_container"><div class="inner">
-<header id="header">
+<!--<header id="header">
 <h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
-</header>
+</header>-->
 
-<ul id="nav">
+<!--<ul id="nav">
 	<li><a href="index.html">HOME</a></li>
 	<li><a href="about.html">ABOUT</a></li>
 	<li><a href="works.html">WORKS</a></li>
 	<li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div><!--header_container--></div>
+</ul>-->
+
+
+<header id="top-head">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="nav">
+            <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="works.html">WORKS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+</header>
+</div></div><!--header_container-->
 
 <div class="wrap">
 <div class="breadcrumb">
@@ -55,7 +76,7 @@
     </tr>
     <tr>
       <th>趣味</th>
-      <td>絵を描くこと,アニメや映画鑑賞</td>
+      <td>絵を描くこと,ゲーム,アニメや映画鑑賞</td>
     </tr>
     <tr>
       <th>特技</th>
@@ -95,6 +116,9 @@
 
 
 </div><!--contents-->
+
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+ <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
