--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <meta name="auther" content="Record">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Record</title>
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/layout.css">
 <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/slick.css">
 <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
@@ -21,28 +20,39 @@
 
 <div id="contents">
 <div class="header_container"><div class="inner">
-<header id="header">
-<h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
-<div id="sp_menu" class="is_open">
-<a class="menu_trigger" href="#">
-	<span></span>
-	<span></span>
-	<span></span>
-</a>
-<!--sp_menu--></div>
-<ul id="nav">
-	<li><a href="index.html">HOME</a></li>
-	<li><a href="about.html">ABOUT</a></li>
-	<li><a href="works.html">WORKS</a></li>
-	<li><a href="contact.html">CONTACT</a></li>
-</ul>
+
+
+<header id="top-head">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="nav">
+            <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="works.html">WORKS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
 </header>
 </div></div><!--header_container-->
 
+
 <figure><a href="#"><img src="img/index_mainvisual03.jpg" alt="main_visual"></a></figure>
 
+
+
+
 <footer id="footer"><div class="inner">
-<ul class="url_btn">
+<div class="url_btn">
+<ul>
 <!--facebook-->
 <li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
 <!--twitter-->
@@ -50,39 +60,40 @@
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
 </ul>
+<!--url_btn--></div>
 
 <small>&copy; Ami Matsuba, all rights reserved.</small>
 </div></footer>
 
 <div id="slider" class="inner">
-<section class="center slider">
+<div class="center slider">
 <div>
-<a href="works.html"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
+<a href="#"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
+<a href="#"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
+<a href="#"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
+<a href="#"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
+<a href="#"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
+<a href="#"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
 </div>
 <div>
-<a href="works.html"><img src="img/illust_box/ra7.jpg" alt="女の子"></a>
+<a href="#"><img src="img/illust_box/ra7.jpg" alt="女の子"></a>
 </div>
-</section>
+</div><!--center slider-->
 <p><a href="works.html">&loz;もっと見る&loz;</a></p>
 </div><!--slider-->
 
-
 </div><!--contents-->
+
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
@@ -96,7 +107,11 @@
         slidesToScroll: 3
       });
     });
+
 </script>
+  <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
+  
+
 
 
 
