--- a/works.html
+++ b/works.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Record</title>
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/layout.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.fancybox-1.3.4.css" media="screen">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
@@ -25,13 +25,14 @@
 
 	});
 </script>
+ <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 
 <body>
 <div id="contents">
 <div class="header_container"><div class="inner">
-<header id="header">
+<!--<header id="header">
 <h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
 </header>
 
@@ -41,6 +42,28 @@
 	<li><a href="works.html">WORKS</a></li>
 	<li><a href="contact.html">CONTACT</a></li>
 </ul>
+</div></div><!--header_container-->
+
+<header id="top-head">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="nav">
+            <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="works.html">WORKS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+</header>
 </div></div><!--header_container-->
 
 <div class="wrap">
