--- a/about.html
+++ b/about.html
@@ -11,16 +11,6 @@
 
 <div id="contents">
 <div class="header_container"><div class="inner">
-<!--<header id="header">
-<h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
-</header>-->
-
-<!--<ul id="nav">
-	<li><a href="index.html">HOME</a></li>
-	<li><a href="about.html">ABOUT</a></li>
-	<li><a href="works.html">WORKS</a></li>
-	<li><a href="contact.html">CONTACT</a></li>
-</ul>-->
 
 
 <header id="top-head">
@@ -57,7 +47,8 @@
 <p class="profile_icon"><img src="img/icon.jpg" alt="myphoto"></p>
 <div class="intro">
 
-<table id="profile">
+<div id="profile">
+<table>
     <tr>
       <th>名前</th>
       <td>松葉　亜美</td>
@@ -68,11 +59,11 @@
     </tr>
     <tr>
       <th>出身校</th>
-      <td>名古屋コミュニケーションアート専門学校<br>コミックイラスト専攻　3年</td>
+      <td>名古屋コミュニケーションアート専門学校<br>コミックイラスト専攻</td>
     </tr>
     <tr>
       <th>スキル</th>
-      <td><img src="img/about_ps.png" alt="photoshop">/<img src="img/about_ai.png" alt="illustrator">/<img src="img/about_dw.png" alt="dreamweaver"> ver.C6,CC2017</td>
+      <td><img src="img/about_ps.jpg" alt="Photoshop">/<img src="img/about_ai.jpg" alt="Illustrator">/<img src="img/about_dw.jpg" alt="Dreamweaver"><br>ver.C6,CC2017,(＋ Photoshop ver.CC2018)</td>
     </tr>
     <tr>
       <th>趣味</th>
@@ -80,37 +71,48 @@
     </tr>
     <tr>
       <th>特技</th>
-      <td>書道楷書八段</td>
+      <td>財団法人日本習字教育財団 生徒部八段 最高段位</td>
     </tr>
     <tr>
       <th>受賞履歴</th>
       <td>
-     &raquo; 大阪コミュニケーションアート専門学校(OCA)<br>第2回Tシャツデザインコンテストグランプリ受賞<br>
-     &raquo; 平成27年度高知県ゲームキャラクターデザインコンテスト<br>グループ「MARBLE」(線画,塗り担当)奨励賞受賞
+      <dl>
+     <dt>&raquo; 大阪コミュニケーションアート専門学校(OCA)</dt><dd>第2回Tシャツデザインコンテストグランプリ受賞</dd>
+     <dt>&raquo; 平成27年度高知県ゲームキャラクターデザインコンテスト</dt><dd>グループ名「MARBLE」(線画,塗り担当)奨励賞受賞</dd>
+     </dl>
       </td>
     </tr>
 </table>
 <div class="sentence">
-<p>自由履修で取ったwebデザインに興味を持つ。</p>
-<p>ゲームのUI/UXを手掛ける人になりたい。</p>
+<p>2017年4月、自由履修で取ったwebデザインに興味を持ち、<br>2017年7月の夏休み頃、自主的にこのポートフォリオサイトを作成し始め11月に完成。</p>
+<p>今はHTML、CSS、JavaScriptを勉強中。</p>
+<p>将来、ゲームのUI/UXを手掛ける人になりたい。</p>
 <!--sentence--></div>
+</div>
 </div><!--intro-->
 </div><!--about_column-->
 </div><!--wrap-->
 
 <footer id="footer"><div class="inner">
-
-<ul class="url_btn">
+<div class="url_btn">
+<ul>
 <!--facebook-->
 <li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
 <!--twitter-->
 <li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
+<!--instagram-->
+<li class="instagram_color"><a href="https://www.instagram.com/sana_m124/?hl=ja"><span>instagram</span></a></li>
+<!--pixiv-->
+<li class="pixiv_color"><a href="https://www.pixiv.net/member.php?id=3562304"><span>pixiv</span></a></li>
 </ul>
+<!--url_btn--></div>
 
+<div class="pagetop"><a href="about.html"><img src="img/toppage_logo.png" alt="ページトップへ"></a></div>
 <small>&copy; Ami Matsuba, all rights reserved.</small>
 </div></footer>
+
 
 
 
