--- a/works.html
+++ b/works.html
@@ -32,17 +32,7 @@
 <body>
 <div id="contents">
 <div class="header_container"><div class="inner">
-<!--<header id="header">
-<h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
-</header>
 
-<ul id="nav">
-	<li><a href="index.html">HOME</a></li>
-	<li><a href="about.html">ABOUT</a></li>
-	<li><a href="works.html">WORKS</a></li>
-	<li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div></div><!--header_container-->
 
 <header id="top-head">
         <div id="mobile-head">
@@ -73,48 +63,58 @@
 	<li><a href="works.html">WORKS</a></li>
 </ul>
 </div><!--breadcrumb-->
-
-<p class="text1">&loz;Illust</p>
+ 
+<p class="text1">&loz;Illust　(タイトル / 制作時間)</p>
 <div id="illust_box">
-    <a rel="example_group" href="img/illust_box/suisen.jpg" title="水仙"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
-    <a rel="example_group" href="img/illust_box/s_matteta.jpg" title="待ってた"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
-    <a rel="example_group" href="img/illust_box/s_ringo.jpg" title="りんご"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
-    <a rel="example_group" href="img/illust_box/s_piasu.jpg" title="ピアス"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
-    <a rel="example_group" href="img/illust_box/yomek.jpg" title="嫁"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
-    <a rel="example_group" href="img/illust_box/kemonodesign.jpg" title="けものデザイン"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
-	<a rel="example_group" href="img/illust_box/ra7.jpg" title="女子中学生"><img src="img/illust_box/ra7.jpg" alt="女子中学生"></a>
-	<a rel="example_group" href="img/illust_box/dare.jpg" title="夕焼け"><img src="img/illust_box/dare.jpg" alt="夕焼け"></a>
-	<a rel="example_group" href="img/illust_box/sora.jpg" title="空"><img src="img/illust_box/sora.jpg" alt="空"></a>
-    <a rel="example_group" href="img/illust_box/sekai.jpg" title="世界"><img src="img/illust_box/sekai.jpg" alt="世界"></a>
-    <a rel="example_group" href="img/illust_box/akashi.jpg" title="証"><img src="img/illust_box/akashi.jpg" alt="証"></a>
-    <a rel="example_group" href="img/illust_box/goodmorning.jpg" title="おはよう"><img src="img/illust_box/goodmorning.jpg" alt="おはよう"></a>
-    <a rel="example_group" href="img/illust_box/yorumiku.jpg" title="夜ミク"><img src="img/illust_box/yorumiku.jpg" alt="夜ミク"></a>
-    <a rel="example_group" href="img/illust_box/wasurenagusa.jpg" title="勿忘草"><img src="img/illust_box/wasurenagusa.jpg" alt="勿忘草"></a>
-    <a rel="example_group" href="img/illust_box/weare.jpg" title="weareNCA"><img src="img/illust_box/weare.jpg" alt="weareNCA"></a>
-    <a rel="example_group" href="img/illust_box/natsuowa.jpg" title="夏の終わり"><img src="img/illust_box/natsuowa.jpg" alt="夏の終わり"></a>
+    <a rel="example_group" href="img/illust_box/suisen.jpg" title="水仙 / 12時間"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
+    <a rel="example_group" href="img/illust_box/s_matteta.jpg" title="待ってた / 3日"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
+    <a rel="example_group" href="img/illust_box/s_ringo.jpg" title="りんご / 3日"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
+    <a rel="example_group" href="img/illust_box/s_piasu.jpg" title="ピアス / 3日"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
+    <a rel="example_group" href="img/illust_box/yomek.jpg" title="嫁 / 2日"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
+    <a rel="example_group" href="img/illust_box/kemonodesign.jpg" title="けものデザイン / 2日"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
+	<a rel="example_group" href="img/illust_box/ra7.jpg" title="女子中学生 / 1時間"><img src="img/illust_box/ra7.jpg" alt="女子中学生"></a>
+	<a rel="example_group" href="img/illust_box/dare.jpg" title="夕焼け / 1週間"><img src="img/illust_box/dare.jpg" alt="夕焼け"></a>
+	<a rel="example_group" href="img/illust_box/sora.jpg" title="空 / 1週間"><img src="img/illust_box/sora.jpg" alt="空"></a>
+    <a rel="example_group" href="img/illust_box/sekai.jpg" title="世界 / 1週間"><img src="img/illust_box/sekai.jpg" alt="世界"></a>
+    <a rel="example_group" href="img/illust_box/akashi.jpg" title="証 / 4日"><img src="img/illust_box/akashi.jpg" alt="証"></a>
+    <a rel="example_group" href="img/illust_box/goodmorning.jpg" title="おはよう / 2日"><img src="img/illust_box/goodmorning.jpg" alt="おはよう"></a>
+    <a rel="example_group" href="img/illust_box/yorumiku.jpg" title="夜ミク / 2日"><img src="img/illust_box/yorumiku.jpg" alt="夜ミク"></a>
+    <a rel="example_group" href="img/illust_box/wasurenagusa.jpg" title="勿忘草 / 10時間"><img src="img/illust_box/wasurenagusa.jpg" alt="勿忘草"></a>
+    <a rel="example_group" href="img/illust_box/weare.jpg" title="weareNCA / 2週間"><img src="img/illust_box/weare.jpg" alt="weareNCA"></a>
+    <a rel="example_group" href="img/illust_box/natsuowa.jpg" title="夏の終わり / 3時間"><img src="img/illust_box/natsuowa.jpg" alt="夏の終わり"></a>
 </div><!--illust_box-->
 
-<p class="text1">&loz;HP</p>
+<p class="text1">&loz;HP &loz;Design</p>
 <div id="design_box">
-<a rel="example_group" href="img/design_box/cafe67_top.png"  title="cafe67toppage"><img src="img/design_box/cafe67_top.png" alt="cafe67toppage"></a>
-<a rel="example_group" href="img/design_box/seihosyou_top.png" title="正保小学校toppage"><img src="img/design_box/seihosyou_top.png" alt="正保小学校top"></a>
+<a rel="example_group" href="img/design_box/cafe67_sc.jpg" title="cafe67トップページ"><img src="img/design_box/cafe67_sc.jpg" alt="cafe67トップページ"></a>
+<a rel="example_group" href="img/design_box/school_sc.jpg" title="正保小学校トップページ"><img src="img/design_box/school_sc.jpg" alt="正保小学校top"></a>
+<a rel="example_group" href="img/design_box/sakura_sc.jpg" title="株式会社サクラトップページ"><img src="img/design_box/sakura_sc.jpg" alt="株式会社サクラ"></a>
+<a rel="example_group" href="img/design_box/sakura_sc02.jpg" title="株式会社サクラお知らせページ"><img src="img/design_box/sakura_sc02.jpg" alt="株式会社サクラお知らせ"></a>
+<a rel="example_group" href="img/design_box/app1-2-3.jpg" title="目覚まし時計アプリデザイン"><img src="img/design_box/app1-2-3.jpg" alt="目覚まし時計アプリデザイン"></a>
 </div><!--design_box-->
 </div><!--wrap-->
 
 
 <footer id="footer"><div class="inner">
-
-<ul class="url_btn">
+<div class="url_btn">
+<ul>
 <!--facebook-->
 <li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
 <!--twitter-->
 <li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
+<!--instagram-->
+<li class="instagram_color"><a href="https://www.instagram.com/sana_m124/?hl=ja"><span>instagram</span></a></li>
+<!--pixiv-->
+<li class="pixiv_color"><a href="https://www.pixiv.net/member.php?id=3562304"><span>pixiv</span></a></li>
 </ul>
+<!--url_btn--></div>
 
+<div class="pagetop"><a href="index.html"><img src="img/toppage_logo.png" alt="ページトップへ"></a></div>
 <small>&copy; Ami Matsuba, all rights reserved.</small>
 </div></footer>
+
 	
 </div><!--contents-->
 </body>
