--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="Keywords" content="ポートフォリオ">
-<meta name="discrition" content="ポートフォリオサイトです。">
+<meta name="Keywords" content="ポートフォリオ,名古屋コミュニケーションアート専門学校">
+<meta name="discrition" content="名古屋コミュニケーションアート専門学校コミックイラスト専攻のポートフォリオサイトです。">
 <meta name="auther" content="Record">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Record</title>
@@ -11,9 +11,6 @@
 <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/slick.css">
 <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
-<style type="text/css">
-
-  </style>
 </head>
 
 <body>
@@ -49,6 +46,60 @@
 
 
 
+<div class="column2"><div class="inner">
+<div id="slider">
+<div class="center slider">
+<div>
+<a href="works.html"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
+</div>
+<div>
+<a href="works.html"><img src="img/illust_box/ra7.jpg" alt="女の子"></a>
+</div>
+</div><!--center slider-->
+
+</div><!--slider--></div></div>
+
+<div id="news"><div class="inner">
+<h2>更新情報</h2>
+<div class="scroll">
+<dl>
+<dt>2017年11月12日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>アプリのデザインを追加しました。</dd>
+</dl>
+<dl>
+<dt>2017年10月11日</dt>
+<dd><span class="cat"><a href="about.html">ABOUT</a></span>プロフィールを更新しました</dd>
+</dl>
+<dl>
+<dt>2017年10月10日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>ペイントツールSAIを使用したイラストを追加しました。</dd>
+</dl>
+<dl>
+<dt>2017年10月09日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>We are NCAで展示したイラストを追加しました。</dd>
+</dl>
+<dl>
+<dt>2017年10月08日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>合同誌の裏表紙の絵を追加しました。</dd>
+</dl>
+
+<!--scroll--></div>
+<!--news--></div></div>
 
 <footer id="footer"><div class="inner">
 <div class="url_btn">
@@ -59,38 +110,16 @@
 <li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
+<!--instagram-->
+<li class="instagram_color"><a href="https://www.instagram.com/sana_m124/?hl=ja"><span>instagram</span></a></li>
+<!--pixiv-->
+<li class="pixiv_color"><a href="https://www.pixiv.net/member.php?id=3562304"><span>pixiv</span></a></li>
 </ul>
 <!--url_btn--></div>
 
+<div class="pagetop"><a href="index.html"><img src="img/toppage_logo.png" alt="ページトップへ"></a></div>
 <small>&copy; Ami Matsuba, all rights reserved.</small>
 </div></footer>
-
-<div id="slider" class="inner">
-<div class="center slider">
-<div>
-<a href="#"><img src="img/illust_box/suisen.jpg" alt="水仙"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/s_matteta.jpg" alt="待ってた"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/s_ringo.jpg" alt="りんご"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/s_piasu.jpg" alt="ピアス"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/yomek.jpg" alt="嫁"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/kemonodesign.jpg" alt="けものデザイン"></a>
-</div>
-<div>
-<a href="#"><img src="img/illust_box/ra7.jpg" alt="女の子"></a>
-</div>
-</div><!--center slider-->
-<p><a href="works.html">&loz;もっと見る&loz;</a></p>
-</div><!--slider-->
 
 </div><!--contents-->
 
@@ -104,13 +133,31 @@
         infinite: true,
         centerMode: true,
         slidesToShow: 5,
-        slidesToScroll: 3
-      });
+        slidesToScroll: 3,
+		responsive: [{
+               breakpoint: 768,
+                    settings: {
+                         slidesToShow: 4,
+                         slidesToScroll: 3,
+               }
+          },{
+               breakpoint: 440,
+                    settings: {
+                         slidesToShow: 2,
+                         slidesToScroll: 2,
+                    }
+               }
+          ]
+		        });
     });
 
 </script>
   <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
   
+ <script type="text/javascript" src="jquery-1.4.2.min.js"></script>
+
+  
+
 
 
 
