--- a/thanks.html
+++ b/thanks.html
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
 <head>
-<meta charset="UTF-8" />
-<title>サンクスページのサンプル</title>
-<meta name="robots" content="noindex,nofollow" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/thanks.css">
+<meta charset="UTF-8">
+<meta name="Keywords" content="ポートフォリオ,名古屋コミュニケーションアート専門学校">
+<meta name="discrition" content="ポートフォリオサイトです。">
+<meta name="auther" content="Record">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="robots" content="noindex,nofollow">
+<title>Record</title>
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
 </head>
 <body>
 
+<div id="contents">
 <div class="header_container"><div class="inner">
-<header id="header">
-<h1><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
-</header>
 
-<ul id="nav">
-	<li><a href="index.html">HOME</a></li>
-	<li><a href="about.html">ABOUT</a></li>
-	<li><a href="works.html">WORKS</a></li>
-	<li><a href="contact.html">CONTACT</a></li>
-</ul>
+
+<header id="top-head">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="index.html"><img src="img/index_title02.png" alt="record"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="nav">
+            <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="works.html">WORKS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+</header>
 </div></div><!--header_container-->
 
-	<div id="thanks"><div class="inner">
-		
-		<h1>お問い合わせありがとうございました。</h1>
-		<p></p>
-		<p></p>
+	<div class="inner"><div id="thanks">
+		<h2>お問い合わせありがとうございました。</h2>
+    <div class="message">
+		<p>送信が完了しました。</p>
+        <p>1週間以内に記載頂いたメールアドレスに返信致します。</p>
+		<p>1週間経ってもお返事が届かない場合は恐れ入りますが、メールフォームまたはメールにて再度お問い合わせください。</p>
+    </div><!--message-->
 	</div></div>
+    
+    
+    <footer id="footer"><div class="inner">
+<div class="url_btn">
+<ul>
+<!--facebook-->
+<li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
+<!--twitter-->
+<li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
+<!--github-->
+<li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
+<!--instagram-->
+<li class="instagram_color"><a href="https://www.instagram.com/sana_m124/?hl=ja"><span>instagram</span></a></li>
+<!--pixiv-->
+<li class="pixiv_color"><a href="https://www.pixiv.net/member.php?id=3562304"><span>pixiv</span></a></li>
+</ul>
+<!--url_btn--></div>
 
+<div class="pagetop"><a href="index.html"><img src="img/toppage_logo.png" alt="ページトップへ"></a></div>
+<small>&copy; Ami Matsuba, all rights reserved.</small>
+</div></footer>
+
+</div><!--contents-->
+
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+ <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
+ 
 </body>
 </html>
