--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </header>
 </div></div><!--header_container-->
 
-
+<div class="inner">
 <figure><a href="#"><img src="img/index_mainvisual03.jpg" alt="main_visual"></a></figure>
-
+</div>
 
 
 <div class="column2"><div class="inner">
@@ -78,8 +78,12 @@
 <h2>更新情報</h2>
 <div class="scroll">
 <dl>
+<dt>2017年11月29日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>Dreamweaverで作成したHPのデザインを追加しました。</dd>
+</dl>
+<dl>
 <dt>2017年11月12日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>アプリのデザインを追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span>Photoshop/Illustratorで作成したアプリのデザインを追加しました。</dd>
 </dl>
 <dl>
 <dt>2017年10月11日</dt>
@@ -107,7 +111,7 @@
 <!--facebook-->
 <li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
 <!--twitter-->
-<li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
+<li class="twitter_color"><a href="https://twitter.com/ri_no_m"><span>twitter</span></a></li>
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
 <!--instagram-->
