--- a/works.html
+++ b/works.html
@@ -84,14 +84,20 @@
     <a rel="example_group" href="img/illust_box/natsuowa.jpg" title="夏の終わり / 3時間"><img src="img/illust_box/natsuowa.jpg" alt="夏の終わり"></a>
 </div><!--illust_box-->
 
-<p class="text1">&loz;HP &loz;Design</p>
-<div id="design_box">
-<a rel="example_group" href="img/design_box/cafe67_sc.jpg" title="cafe67トップページ"><img src="img/design_box/cafe67_sc.jpg" alt="cafe67トップページ"></a>
-<a rel="example_group" href="img/design_box/school_sc.jpg" title="正保小学校トップページ"><img src="img/design_box/school_sc.jpg" alt="正保小学校top"></a>
-<a rel="example_group" href="img/design_box/sakura_sc.jpg" title="株式会社サクラトップページ"><img src="img/design_box/sakura_sc.jpg" alt="株式会社サクラ"></a>
-<a rel="example_group" href="img/design_box/sakura_sc02.jpg" title="株式会社サクラお知らせページ"><img src="img/design_box/sakura_sc02.jpg" alt="株式会社サクラお知らせ"></a>
-<a rel="example_group" href="img/design_box/app1-2-3.jpg" title="目覚まし時計アプリデザイン"><img src="img/design_box/app1-2-3.jpg" alt="目覚まし時計アプリデザイン"></a>
-</div><!--design_box-->
+<p class="text1">&loz;HP</p>
+<div id="design_box01">
+<a rel="example_group" href="img/design_box01/cafe67_sc.jpg" title="cafe67トップページ"><img src="img/design_box01/cafe67_sc.jpg" alt="cafe67トップページ"></a>
+<a rel="example_group" href="img/design_box01/school_sc.jpg" title="正保小学校トップページ"><img src="img/design_box01/school_sc.jpg" alt="正保小学校top"></a>
+<a rel="example_group" href="img/design_box01/sakura_sc.jpg" title="株式会社サクラトップページ"><img src="img/design_box01/sakura_sc.jpg" alt="株式会社サクラ"></a>
+<a rel="example_group" href="img/design_box01/sakura_sc02.jpg" title="株式会社サクラお知らせページ"><img src="img/design_box01/sakura_sc02.jpg" alt="株式会社サクラお知らせ"></a>
+<a rel="example_group" href="img/design_box01/sunnycafe_sc.png" title="Sunny Caf&eacute;"><img src="img/design_box01/sunnycafe_sc.png" alt="Sunny Caf&eacute;トップページ"></a>
+<a rel="example_group" href="img/design_box01/mitsubaclinic_sc.jpg" title="三つ葉在宅クリニックトップページ"><img src="img/design_box01/mitsubaclinic_sc.jpg" alt="三つ葉在宅クリニック"></a>
+</div><!--design_box01-->
+
+<p class="text1">&loz;Design</p>
+<div id="design_box02">
+<a rel="example_group" href="img/design_box02/kan.jpg" title="目覚まし時計アプリデザイン"><img src="img/design_box02/kan.jpg" alt="目覚まし時計アプリデザイン"></a>
+</div><!--design_box02-->
 </div><!--wrap-->
 
 
@@ -101,7 +107,7 @@
 <!--facebook-->
 <li class="facebook_color"><a href="https://www.facebook.com/ami.matsuba.9"><span>facebook</span></a></li>
 <!--twitter-->
-<li class="twitter_color"><a href="https://twitter.com/sana_m124"><span>twitter</span></a></li>
+<li class="twitter_color"><a href="https://twitter.com/ri_no_m"><span>twitter</span></a></li>
 <!--github-->
 <li class="github_color"><a href="https://github.com/minasefia"><span>github</span></a></li>
 <!--instagram-->
