--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     </tr>
     <tr>
       <th>スキル</th>
-      <td><img src="img/about_ps.jpg" alt="Photoshop">/<img src="img/about_ai.jpg" alt="Illustrator">/<img src="img/about_dw.jpg" alt="Dreamweaver"><br>ver.C6,CC2017,(＋ Photoshop ver.CC2018)</td>
+      <td><img src="img/about_ps.jpg" alt="Photoshop">/<img src="img/about_ai.jpg" alt="Illustrator">/<img src="img/about_dw.jpg" alt="Dreamweaver">/<img src="img/about_fw.jpg" alt="Fireworks"><br>ver.C6,CC2017,(＋ Photoshop ver.CC2018)</td>
     </tr>
     <tr>
       <th>趣味</th>
@@ -84,8 +84,10 @@
     </tr>
 </table>
 <div class="sentence">
-<p>2017年4月、自由履修で取ったwebデザインに興味を持ち、<br>2017年7月の夏休み頃、自主的にこのポートフォリオサイトを作成し始め11月に完成。</p>
+<p>&#42;たくさんの経験を積み、中途半端にしない様にできることを増やしていく。</p>
+<p>2017年4月、自由履修で履修したwebデザインに興味を持ち、<br>2017年7月の夏休み頃、自主的にこのポートフォリオサイトを作成し始め11月に完成。</p>
 <p>今はHTML、CSS、JavaScriptを勉強中。</p>
+<p>3DCGにも興味があり、Mayaも少しだけ。</p>
 <p>将来、ゲームのUI/UXを手掛ける人になりたい。</p>
 <!--sentence--></div>
 </div>
