--- a/index.html
+++ b/index.html
@@ -78,28 +78,32 @@
 <h2>更新情報</h2>
 <div class="scroll">
 <dl>
+<dt>2017年12月21日</dt>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">Dreamweaverで作成したHPのデザインを追加しました。</a></dd>
+</dl>
+<dl>
 <dt>2017年11月29日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>Dreamweaverで作成したHPのデザインを追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">Dreamweaverで作成したHPのデザインを追加しました。</a></dd>
 </dl>
 <dl>
 <dt>2017年11月12日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>Photoshop/Illustratorで作成したアプリのデザインを追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">Photoshop/Illustratorで作成したアプリのデザインを追加しました。</a></dd>
 </dl>
 <dl>
 <dt>2017年10月11日</dt>
-<dd><span class="cat"><a href="about.html">ABOUT</a></span>プロフィールを更新しました</dd>
+<dd><span class="cat"><a href="about.html">ABOUT</a></span><a href="about.html">プロフィールを更新しました。</a></dd>
 </dl>
 <dl>
 <dt>2017年10月10日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>ペイントツールSAIを使用したイラストを追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">ペイントツールSAIを使用したイラストを追加しました。</a></dd>
 </dl>
 <dl>
 <dt>2017年10月09日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>We are NCAで展示したイラストを追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">We are NCAで展示したイラストを追加しました。</a></dd>
 </dl>
 <dl>
 <dt>2017年10月08日</dt>
-<dd><span class="cat"><a href="works.html">WORKS</a></span>合同誌の裏表紙の絵を追加しました。</dd>
+<dd><span class="cat"><a href="works.html">WORKS</a></span><a href="works.html">合同誌の裏表紙の絵を追加しました。</a></dd>
 </dl>
 
 <!--scroll--></div>
