--- a/works.html
+++ b/works.html
@@ -90,8 +90,9 @@
 <a rel="example_group" href="img/design_box01/school_sc.jpg" title="正保小学校トップページ"><img src="img/design_box01/school_sc.jpg" alt="正保小学校top"></a>
 <a rel="example_group" href="img/design_box01/sakura_sc.jpg" title="株式会社サクラトップページ"><img src="img/design_box01/sakura_sc.jpg" alt="株式会社サクラ"></a>
 <a rel="example_group" href="img/design_box01/sakura_sc02.jpg" title="株式会社サクラお知らせページ"><img src="img/design_box01/sakura_sc02.jpg" alt="株式会社サクラお知らせ"></a>
-<a rel="example_group" href="img/design_box01/sunnycafe_sc.png" title="Sunny Caf&eacute;"><img src="img/design_box01/sunnycafe_sc.png" alt="Sunny Caf&eacute;トップページ"></a>
+<a rel="example_group" href="img/design_box01/sunnycafe_sc.png" title="Sunny Caf&eacute;トップページ"><img src="img/design_box01/sunnycafe_sc.png" alt="Sunny Caf&eacute;トップページ"></a>
 <a rel="example_group" href="img/design_box01/mitsubaclinic_sc.jpg" title="三つ葉在宅クリニックトップページ"><img src="img/design_box01/mitsubaclinic_sc.jpg" alt="三つ葉在宅クリニック"></a>
+<a rel="example_group" href="img/design_box01/mitsubaclinic_sc02.jpg" title="三つ葉在宅クリニッククリニックについてページ"><img src="img/design_box01/mitsubaclinic_sc02.jpg" alt="三つ葉在宅クリニッククリニックについてページ"></a>
 </div><!--design_box01-->
 
 <p class="text1">&loz;Design</p>
